visual bug causing mapside appear on mobile even though it's collapsed

--- a/src/styling/Map.scss
+++ b/src/styling/Map.scss
@@ -3,7 +3,6 @@
 $width: calc(100% - 40rem);
 
 .LeafletMap {
-  background-color: red;
   width: 100%;
   z-index: 0;
 }
